# ulam_spiral

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ulamspiral.h  utils.h
src/: main.c  ulamspiral.c  utils.c
